--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        
+        <script src="javascript.js"></script>
     </body>
 </html>
