--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <div class="container">
+            <div class="display"></div>
+            <div class="btns">
+                <button id="divide">÷</button>
+                <button id="multiply">x</button>
+                <button id="add">+</button>
+                <button id="subtract">-</button>
+                <button id="equals">=</button>
+                <button id="7">7</button>
+                <button id="8">8</button>
+                <button id="9">9</button>
+                <button id="clear">C</button>
+                <button id="4">4</button>
+                <button id="5">5</button>
+                <button id="6">6</button>
+                <button id="0">0</button>
+                <button id="1">1</button>
+                <button id="2">2</button>
+                <button id="3">3</button>
+            </div>
+        </div>
         <script src="javascript.js"></script>
     </body>
 </html>
