Add additional containers for button groups

--- a/index.html
+++ b/index.html
@@ -7,19 +7,25 @@
     <body>
         <div class="container">
             <div class="display"></div>
-            <div class="btns">
+            <div class="row1">
                 <button id="divide">÷</button>
                 <button id="multiply">x</button>
                 <button id="add">+</button>
                 <button id="subtract">-</button>
+            </div>
+            <div class="row2">
                 <button id="equals">=</button>
                 <button id="7">7</button>
                 <button id="8">8</button>
                 <button id="9">9</button>
+            </div>
+            <div class="row3">
                 <button id="clear">C</button>
                 <button id="4">4</button>
                 <button id="5">5</button>
                 <button id="6">6</button>
+            </div>
+            <div class="row4">
                 <button id="0">0</button>
                 <button id="1">1</button>
                 <button id="2">2</button>
