Change names of the rows and  button classes

--- a/index.html
+++ b/index.html
@@ -7,29 +7,29 @@
     <body>
         <div class="container">
             <div class="display"></div>
-            <div class="row 1">
+            <div class="first row">
                 <button id="divide">÷</button>
                 <button id="multiply">x</button>
                 <button id="add">+</button>
                 <button id="subtract">-</button>
             </div>
-            <div class="row 2">
+            <div class="second row">
                 <button id="equals">=</button>
-                <button id="7">7</button>
-                <button id="8">8</button>
-                <button id="9">9</button>
+                <button id="seven">7</button>
+                <button id="eight">8</button>
+                <button id="nine">9</button>
             </div>
-            <div class="row 3">
+            <div class="third row">
                 <button id="clear">C</button>
-                <button id="4">4</button>
-                <button id="5">5</button>
-                <button id="6">6</button>
+                <button id="four">4</button>
+                <button id="five">5</button>
+                <button id="six">6</button>
             </div>
-            <div class="row 4">
-                <button id="0">0</button>
-                <button id="1">1</button>
-                <button id="2">2</button>
-                <button id="3">3</button>
+            <div class="fourth row">
+                <button id="zero">0</button>
+                <button id="one">1</button>
+                <button id="two">2</button>
+                <button id="three">3</button>
             </div>
         </div>
         <script src="javascript.js"></script>
