Add text to display

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="container">
-            <div class="display"></div>
+            <div class="display">0</div>
             <div class="first row">
                 <button id="divide">÷</button>
                 <button id="multiply">x</button>
