Divide display into two boxes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     </head>
     <body>
         <div class="container">
-            <div class="display"></div>
+            <div class="display">
+                <div class="sign"></div>
+                <div class="number"></div>
+            </div>
             <div class="first row">
                 <button id="divide">÷</button>
                 <button id="multiply">x</button>
