--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <body>
         <div class="container">
             <div class="display">
-                <div class="sign">0</div>
-                <div class="number">0</div>
+                <div class="sign"></div>
+                <div class="number"></div>
             </div>
             <div class="first row">
                 <button id="divide">÷</button>
