--- a/index.html
+++ b/index.html
@@ -11,28 +11,28 @@
                 <div class="number"></div>
             </div>
             <div class="first row">
-                <button id="divide">÷</button>
-                <button id="multiply">x</button>
-                <button id="add">+</button>
-                <button id="subtract">-</button>
+                <button id="divide" value="÷">÷</button>
+                <button id="multiply" value="x">x</button>
+                <button id="add" value="+">+</button>
+                <button id="subtract" value="-">-</button>
             </div>
             <div class="second row">
-                <button id="equals">=</button>
-                <button id="seven">7</button>
-                <button id="eight">8</button>
-                <button id="nine">9</button>
+                <button id="equals" value="=">=</button>
+                <button id="seven" value="7">7</button>
+                <button id="eight" value="8">8</button>
+                <button id="nine" value="9">9</button>
             </div>
             <div class="third row">
                 <button id="clear">C</button>
-                <button id="four">4</button>
-                <button id="five">5</button>
-                <button id="six">6</button>
+                <button id="four" value="4">4</button>
+                <button id="five" value="5">5</button>
+                <button id="six" value="6">6</button>
             </div>
             <div class="fourth row">
-                <button id="zero">0</button>
-                <button id="one">1</button>
-                <button id="two">2</button>
-                <button id="three">3</button>
+                <button id="zero" value="0">0</button>
+                <button id="one" value="1">1</button>
+                <button id="two" value="2">2</button>
+                <button id="three" value="3">3</button>
             </div>
         </div>
         <script src="javascript.js"></script>
