--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <button id="nine" value="9">9</button>
             </div>
             <div class="third row">
-                <button id="clear">C</button>
+                <button id="clear" value="clear">C</button>
                 <button id="four" value="4">4</button>
                 <button id="five" value="5">5</button>
                 <button id="six" value="6">6</button>
